fixed z-index for import questions dialog

--- a/src/css/create.scss
+++ b/src/css/create.scss
@@ -182,6 +182,7 @@ a {
 	text-align: left;
 	top: 50%;
 	width: 800px;
+	z-index: 10
 }
 #modal-cover {
 	background-color: #000000;
